--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Kanmi's PIG game</title>
     <link rel="stylesheet" href="mystyle.css">
 </head>
@@ -21,6 +21,7 @@
             score gets added to his GLOBAL score. After
             that, it's the next player turn.</p>
         <p>5. The first player to reach 100points wins the game.</p>
+        <p>6. Whenever you roll dice(6) on on a row twice, you lose your GLOBAL score
 
     </div>
 
@@ -48,7 +49,7 @@
             <div class="player-score score-1 activ" id="score-1">B</div>
             <div class="current-score current-score-1" id="current-score-1">16</div>
         </div>
-        <div><img src="images/dice-6.png" alt="" class="dice"></div>
+        <div><img src="images/dice-6.PNG" alt="" class="dice"></div>
         <!-- <div><img src="images/dice-5.png" alt="" class="dicey"></div> -->
 
         <button class="btn-roll">ROLL DICE</button>
