--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="player-score score-1 activ" id="score-1">B</div>
             <div class="current-score current-score-1" id="current-score-1">16</div>
         </div>
-        <div><img src="images/dice-6.PNG" alt="" class="dice"></div>
+        <div><img src="../images/dice-6.png" alt="" class="dice"></div>
         <!-- <div><img src="images/dice-5.png" alt="" class="dicey"></div> -->
 
         <button class="btn-roll">ROLL DICE</button>
