--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 
     </div>
 
-    <p class="ent">Before playing this game, fill this input below to set the total amassed point for a winner to be
-        declared.</p>
-    <input type="text" class="scoreboard">
-    <button type="button" onclick="getInput();">Enter</button>
+    <p class="ent">You have to fill this box by the right side to set your preferred total amassed point for a winner to be
+        declared.   <input type="text" class="scoreboard">   <button type="button" onclick="getInput();">Enter</button></p>
+    
 
 
     <a href="http://www.facebook.com/geefreeze" onclick="return clicke()">Click me to go to Fr!zz's facebook page...</a>
