--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <p class="ent">You have to fill this box by the right side to set your preferred total amassed point for a winner to be
-        declared.   <input type="text" class="scoreboard">   <button type="button" onclick="getInput();">Enter</button></p>
+        declared.   <input type="number" class="scoreboard">   <button type="button" onclick="getInput();">Enter</button></p>
     
 
 
