--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
 
 
-    <a href="http://www.facebook.com/geefreeze" onclick="return clicke()">Click me to go to Fr!zz's facebook page...</a>
+    <a href="http://www.facebook.com/geefreeze" target="_blank" onclick="return clicke()">Click me to go to Fr!zz's facebook page...</a>
 
 
     <h3 class="kanmi">Welcome to Kanmi's game, enjoy!!!</h3>
