--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             in his round to his GLOBAL SCORE(which is the score underneath the player name) which means that his "Round"
             score gets added to his GLOBAL score. After
             that, it's the next player turn.</p>
-        <p>5. The first player to reach 100points wins the game.</p>
+        <p>5.Fill the input below to choose the total score you would prefer a winner to be declared.</p>
 
     </div>
 
