--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ The round score is where the dice or numbers you roll goes into while the Global
             turn.</p>
         <p>4. But you can choose to "HOLD", by pressing the hold button so as to save the numbers previously rolled
             in your round to your GLOBAL SCORE.</p>
+        <p> To know who's the active player, the active player name is written in red with a dark background.</p>
 
     </div>
 
