--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <p> This game has two boxes, one named the ROUND-SCORE(The white box) while the other is named GLOBAL-SCORE(The black box with red borders.).
 The round score is where the dice or numbers you roll goes into while the Global-Score is where the saved "Round-scores" goes into.
  </p>
- <h3> The ROLL button is the button for rolling a dice.</h3>
- <h3> The HOLD button is the button for adding your Round-scores to your Global-Score. Note: Whenever you use this, you lose your turn and it's the next player's turn to roll dice.</h3>
-<h3> The NEW GAME button is used to reset the game and start a new one.</h3>
+ <h4> The ROLL button is the button for rolling a dice.</h4>
+ <h4> The HOLD button is the button for adding your Round-scores to your Global-Score. Note: Whenever you use this, you lose your turn and it's the next player's turn to roll dice.</h4>
+<h4> The NEW GAME button is used to reset the game and start a new one.</h4>
 
         <p>Fill the input below to choose the total score you would prefer a winner to be declared.</p>
         <p> 1. This game has two players, playing in rounds.</p>
@@ -25,7 +25,7 @@ The round score is where the dice or numbers you roll goes into while the Global
             turn.</p>
         <p>4. But you can choose to "HOLD", by pressing the hold button so as to save the numbers previously rolled
             in your round to your GLOBAL SCORE.</p>
-        <p> To know who's the active player, the active player name is written in red with a dark background.</p>
+        <p> To know who's the active player, the active player name is written in red on a dark background.</p>
 
     </div>
 
